--- a/war/HistoryMap.css
+++ b/war/HistoryMap.css
@@ -32,3 +32,20 @@ h1 {
 #closeButton {
   margin: 15px 6px 6px;
 }
+
+.nicebox {
+          position: absolute;
+          text-align: center;
+          font-family: "Roboto", "Arial", sans-serif;
+          font-size: 13px;
+          z-index: 5;
+          box-shadow: 0 4px 6px -4px #333;
+          padding: 5px 10px;
+          border: rgb(229, 229, 229) 1px solid;
+        }
+        #controls {
+          top: 10px;
+          left: 110px;
+          width: 360px;
+          height: 45px;
+        }
